--- a/OJETWebApplication7/src/js/views/demo5.html
+++ b/OJETWebApplication7/src/js/views/demo5.html
@@ -1,4 +1,4 @@
-<h1>Add a Person</h1>
+<h1>Update a Person</h1>
 <div id="output-table"  style="width: 1px; min-width: 100%;">
   <oj-form-layout readonly="false" colspan-wrap="wrap" max-columns="1">
     <div>
@@ -8,7 +8,7 @@
 
     </div>
     <div>
-      <oj-button id="addButton" on-oj-action="[[addRow]]">Create</oj-button>
+      <oj-button id="updateButton" on-oj-action="[[updateRow]]">Update</oj-button>
     </div>
  
   <oj-bind-if test="[[showTable() === true ]]"> 
