--- a/OJETWebApplication7/src/js/views/demo6.html
+++ b/OJETWebApplication7/src/js/views/demo6.html
@@ -1,14 +1,13 @@
-<h1>Add a Person</h1>
+<h1>Delete a Person</h1>
 <div id="output-table"  style="width: 1px; min-width: 100%;">
   <oj-form-layout readonly="false" colspan-wrap="wrap" max-columns="1">
     <div>
       <oj-c-input-number id="personIdInput" label-hint="Person Id" value="{{inputPersonId}}"></oj-c-input-number>
-      <oj-input-text id="personNameInput" label-hint="Person Name" value="{{inputPersonName}}"></oj-input-text>
-      <oj-c-input-number id="salaryInput" label-hint="Salary" value="{{inputSalary}}"></oj-c-input-number>
+      
 
     </div>
     <div>
-      <oj-button id="addButton" on-oj-action="[[addRow]]">Create</oj-button>
+      <oj-button id="deleteButton" on-oj-action="[[deleteRow]]">Delete</oj-button>
     </div>
  
   <oj-bind-if test="[[showTable() === true ]]"> 
